--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start-dev": "nodemon --inspect=0.0.0.0:9229 server.js"
   },
   "repository": {
     "type": "git",
