--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.3.0",
     "openai": "^4.27.0",
     "url": "^0.11.3"
